
5.2a2 -> 5.2a3:
    - jbj: bzdio: stage the multi-block BZIP2 payload code for debugging.
    - jbj: bzdio: populate rpmbz with all but bz->fp, rearrange code to taste.
    - jbj: bzdio: use the rpmbz container to carry around BZFILE *bzfile.
    - jbj: bzdio: add annotation for bzip2, add (unused) rpmbz container.
    - jbj: rpmz: add a modified version of rpmpigz (before merging with rpmz).
    - jbj: rpmz: add Fchown/Fchmod, attempt to preserve owner/perms/timestamp.
    - jbj: rpmz: swipe xz AutoFu to detect timestamps.
    - jbj: rpmz: swipe xz AutoFu to detect physmem/ncpus.
    - jbj: yarn: add to rpmio.
    - jbj: rpmz: stub in argv[0] processing to set operation mode.
    - jbj: rpmz: stub in RPMZ envvar option processing.
    - jbj: fix: eliminate a argvSplit() memory leak.
    - jbj: rpmz: gather args from multiple manifests (ala rpmwget).
    - jbj: rpmz: stub in --files manifest handling (ignore --files0 for now).
    - jbj: rpmz: stub in signal handling.
    - jbj: rpmz: handle gzip/bzip2/xz/lzma compression in 1 executable.
    - proyvind: create %mipsel and also add more generations to the mips macros. 
    - jbj: fix: avoid the assertion failure w LZMA lzdio by upgrading to XZ.
    - proyvind: add initial support for detecting automatically detecting
	architecture through libcpuinfo.
    - jbj: stub-in /usr/lib/rpm/helpers/makeshlibs proof-of-concept.
    - proyvind: add %mips & %mipsx macros for mips archictecture.
    - jbj: add rpmdsNSType() to -lrpm loader map.
    - jbj: rpmtsOrder: enable parentdir/linkto ordering relations.
    - jbj: rpmrepo: initialize Packages/Sources markup.
    - jbj: rpmrepo: initialize ".yaml" markup, add pre/post oneshot vectors.
    - jbj: rpmrepo: compile in deb_{Packages,Sources} queryformats.
    - jbj: rpmrepo: compile in wnh_{primary,filelists,other}_yaml queryformats.
    - jbj: stub in deb:{Packages,Sources} queryformt templates.
    - jbj: install/use deb:control queryformat. todo++